# Trees

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  c-cpp.yml  test-code.yml  unit-tests.yml
examples/: example_1.cpp  example_2.cpp  example_double.cpp  example_int.cpp
examples/BST/: double.cpp  int.cpp
include/: BSTree.hpp
include/Trees/: AVL.hpp  BST.hpp
tests/: CMakeLists.txt  bst_tests.cpp
